[project]
name = "web3-deep-research"
version = "0.1.0"
description = "AI-powered deep research tool for Web3 and blockchain analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0", 
    "langgraph>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
